# TeeworldsBotLib

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build.yml  clang-tidy.yml  style.yml  test.yml
scripts/: fix_style.py
src/bots/: base.cpp  base.h  def_macros.h  follow.cpp  follow.h  sample.cpp  undef_macros.h
src/bots/engine_sample/: engine_sample.cpp  engine_sample.h
src/bots/follow/: follow.cpp  follow.h
src/bots/sample/: sample.cpp  sample.h
src/engines/: README.md  base_engine.cpp  base_engine.h  def_macros.h  undef_macros.h
src/engines/sample_engine/: sample_engine.cpp  sample_engine.h
src/server/: ddnet_callback_ctx.cpp  ddnet_callback_ctx.h  set_state.h
src/shared/: character.h  hotreload.cpp  hotreload.h  player.h  types.h  vmath.h
src/shared/base/: detect.h  system.h
src/test/: mock_callback_ctx.cpp  mock_callback_ctx.h  setup.cpp  setup.h  twbl_assert.cpp  twbl_assert.h
src/test/engine_sample/: test_engine_sample.cpp
src/test/follow/: test_follow.cpp
src/test/sample/: test_sample.cpp
src/tools/: twbl_probe.cpp
src/twbl/: callback_ctx.h  hotreload.cpp  hotreload.h  state.h  tracer.cpp  tracer.h  types.h
src/twbl/teeworlds/: character.cpp  character.h  collision.h  gamecontext.h  player.h  protocol.h
src/twbl/teeworlds/base/: color.cpp  color.h  dbg.cpp  dbg.h  detect.h  math.h  system.cpp  system.h  vmath.h
